--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
-    <body>
-        <div id="root"></div>
+  <style>
+    html {
+      color-scheme: light dark;
+    }
+  </style>
 
-        <script src="./react.js"></script>
-    </body>
+  <body>
+    <div id="root"></div>
+
+    <script src="./react.js"></script>
+  </body>
 </html>
