--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     html {
       color-scheme: light dark;
     }
+
+    body {
+      font-family: "Helvetica Neue", sans-serif;
+    }
   </style>
 
   <body>
